# calhacks24

./: .gitignore  README.md  docker-compose.override.yml.example  docker-compose.yml  env.example  plan.md  start.sh  stop.sh  target.txt  tests_v2.py
backend/: Dockerfile  fix_imports.py  pyproject.toml  requirements.txt  test_agent_integration.py  test_multiagent.py
backend/app/: __init__.py  config.py  main.py  tests.py
backend/app/api/: websocket.py
backend/app/api/routes/: auth.py  rooms.py  users.py
backend/app/core/: database.py  db_init.py  init_rooms.py  migration_001_per_room_usernames.sql  migration_002_add_persona.sql  redis_client.py  security.py
backend/app/models/: __init__.py  message.py  room.py  user.py
backend/app/schemas/: agent_schemas.py  message_schema.py  room_schema.py  user_schema.py
backend/app/services/: ai_service.py  context_manager.py  conversation_memory.py  enhanced_memory_manager.py  host_prompt_builder.py  intelligent_prompt_builder.py  linkedin_scraper.py  multiagent_service.py  room_context_builder.py  room_service.py  trigger_ai_service.py  user_service.py
backend/app/utils/: prompt_builder.py  sentiment_analyzer.py  trigger_detector.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActiveUsersPanel.tsx  ChatPanel.tsx  EmotionIndicator.tsx  GameCanvas.tsx  LoadingSpinner.tsx  ModerationNotifications.tsx  UserList.tsx
frontend/src/game/: GameScene.ts  (+2 more)
nginx/: Dockerfile  nginx.conf
(+11 files in other folders)
